# airwiki

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  PLANS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  dco.yml  package-pilot.yml
apps/: AGENTS.md
apps/desktop/: Cargo.toml  build.rs
apps/desktop/locales/: en-US.ftl  es.ftl
apps/desktop/src/: activation.rs  app.rs  autostart.rs  branding.rs  connectivity_platform.rs  desktop_shell.rs  i18n.rs  integrations.rs  layout.rs  main.rs  manual_lan_route.rs  model_config.rs  paths.rs  readiness.rs  services.rs  theme.rs  updater.rs  worker.rs
apps/desktop/src/app/: first_knowledge.rs  integrations.rs  knowledge.rs  review.rs
apps/desktop/tests/: mcp_relevance.rs
apps/federation-index/: Cargo.toml
apps/federation-index/src/: lib.rs  main.rs
apps/federation-index/tests/: public_roundtrip.rs
apps/mcp-bridge/: Cargo.toml
apps/mcp-bridge/src/: main.rs
apps/mcp-bridge/tests/: stdio_protocol.rs
apps/windows-firewall-helper/: Cargo.toml  build.rs
apps/windows-firewall-helper/src/: lib.rs  main.rs  platform.rs
crates/airwiki-core/: Cargo.toml
crates/airwiki-core/migrations/: 0001_initial.sql  0002_publication_claims.sql  0003_collection_maintenance.sql  0004_public_federation.sql  0005_public_federation_hardening.sql
crates/airwiki-core/src/: chunk_identity.rs  config.rs  inference.rs  ingest.rs  knowledge.rs  lib.rs  okf.rs  pipeline.rs  publication.rs  repair.rs  reranker.rs  search.rs  storage.rs
crates/airwiki-inference/: Cargo.toml
crates/airwiki-inference/src/: assets.rs  catalog.rs  client.rs  diagnostic.rs  lib.rs  supervisor.rs
crates/airwiki-mcp/: Cargo.toml
crates/airwiki-mcp/src/: lib.rs
crates/airwiki-network/: Cargo.toml
crates/airwiki-network/src/: access.rs  address.rs  codec.rs  coordinator.rs  identity.rs  lib.rs  pairing.rs  public_catalog.rs  public_manifest.rs  public_reader.rs  public_source.rs  rate_limit.rs  runtime.rs
crates/airwiki-types/: Cargo.toml
crates/airwiki-types/src/: lib.rs  public.rs
docs/: DCO.md  architecture.md  chat-integrations.md  install.md  internet-federation-runbook.md  maintainer-validation.md  mcp-prompt-evals.md  mcp-secure-tunnel.md  packaging.md  pool-null-selector-experiment.md  recovery.md  release-checklist.md  relevance-gate-evaluation.md  retrieval-quality-evaluation.md  retrieval-research-ledger.md  selector-adaptation-experiment.md  threat-model.md  two-node-runbook.md  typed-evidence-ceiling-experiment.md  typed-evidence-ceiling-v2.md
docs/adr/: 0001-answerability-gated-search-v2.md  0002-local-chat-integrations.md  0003-desktop-lifecycle-and-signed-updates.md  0004-sqlite-okf-authority-and-reconciliation.md  0005-lan-identity-pairing-and-authorization.md  0006-windows-firewall-privilege-boundary.md  0007-separate-evidence-from-authorized-candidates.md  0008-public-federation.md  README.md
docs/archive/release-workflows/: README.md  promote-stable.yml.disabled  release-candidate.yml.disabled
docs/history/: 2026-07-development-summary.md
experiments/pool-null-selector-v1/: README.md  runner.py
experiments/pool-null-selector-v1/evidence/: README.md  compatibility-attempt.json  compatibility-report.json
experiments/typed-evidence-ceiling-v1/: field-guide.md  question-annotation-prompt.md  source-annotation-prompt.md
experiments/typed-evidence-ceiling-v1/prepared/: .typed-evidence-complete  control.jsonl  question-input.jsonl  source-input.jsonl
experiments/typed-evidence-ceiling-v2/: field-guide.md
experiments/typed-evidence-ceiling-v2/prepared/: control.jsonl  question-input.jsonl  source-input.jsonl
experiments/typed-evidence-ceiling-v2/prompts/: question-adjudicator.md  question-annotator.md  source-adjudicator.md  source-annotator.md
fixtures/: README.md
fixtures/mac/: atlas-estado-ambar.md  atlas-estado-verde.md  atlas-nota-no-confiable.md  proyecto-atlas.md
fixtures/private/: no-compartir.md
fixtures/relevance/: answerability.json
fixtures/retrieval/: mini-graph-final-holdout-v1.json  mini-graph-real-development-v1.json  mini-graph-v1.json  okf-diffusion-development-v1.json  reviewed-anchors-v1.json  search-quality-v1.json  search-quality-v2.json  search-quality-v3.json
fixtures/retrieval/okf-path-signal-development-v1/: README.md  cases.json  concepts.json  links.json  manifest.json
fixtures/selector/answerability-v1/: judgments.jsonl  passages.jsonl  queries.jsonl
fixtures/windows/: proyecto-atlas-responsable.md
packaging/: AGENTS.md  fetch-llama-macos.sh  fetch-llama-windows.ps1  generate-update-manifest.py  llama-windows-build-policy.json  package-macos.sh  package-signed-windows.ps1  package-validated-windows-bundle.ps1  package-windows.ps1  prepare-verified-7zip.ps1  prepare-verified-nsis-toolchain.ps1  prepare-windows-release.ps1  release-macos.sh  sign-macos-bridge.sh  sign-windows-artifact.ps1  smoke-install-windows.ps1  smoke-validated-windows-installer.ps1  test-windows-safe-staging.ps1  verify-windows-release.ps1  windows-payload.ps1  windows-runtime.ps1  windows-safe-staging.ps1  windows-signing.ps1
packaging/federation-index/: azure-install.sh
packaging/macos/: Info.plist  Packager.toml  io.github.airwiki.AirWiki.background.plist
packaging/windows/: Packager.toml  ValidatedBundle.Packager.toml  installer.nsi
resources/branding/: README.md  airwiki-tray.rgba  airwiki-window.rgba  airwiki.icns
resources/licenses/: NON_CARGO_COMPONENTS.md  README.md  THIRD_PARTY_LICENSES.md
xtask/: Cargo.toml
xtask/src/: docs.rs  main.rs  retrieval.rs  selector_corpus.rs  typed_evidence_trace.rs  typed_evidence_v2.rs
xtask/src/retrieval/: answerability.rs  corpus.rs  mini_graph.rs  path_signal.rs  qa_entailment.rs  real_graph.rs  rerank_calibration.rs  rerank_order.rs  reviewed_anchor_selector.rs  reviewed_anchors.rs  selector.rs  sham_graph.rs
xtask/src/retrieval/corpus/: loader.rs
xtask/src/retrieval/real_graph/: diffusion_rerank.rs
(+15 files in other folders)
