[workspace]
resolver = "2"
members = [
    "apps/desktop",
    "apps/mcp-bridge",
    "apps/windows-firewall-helper",
    "crates/airwiki-core",
    "crates/airwiki-inference",
    "crates/airwiki-mcp",
    "crates/airwiki-network",
    "crates/airwiki-types",
    "xtask",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.96.1"
license = "Apache-2.0"
publish = false
authors = ["AirWiki contributors"]
repository = "https://github.com/airwiki/airwiki"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
