[package]
name = "xtask"
description = "Reproducible development and packaging tasks for AirWiki"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
airwiki-core = { version = "0.2.0", path = "../crates/airwiki-core", features = ["fastembed-runtime"] }
airwiki-inference = { version = "0.2.0", path = "../crates/airwiki-inference" }
hex = "0.4.3"
minisign-verify = "0.2.5"
serde.workspace = true
serde_json.workspace = true
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
sha2 = "0.10.9"
tokio = { workspace = true, features = ["fs"] }
tokio-util = "0.7.18"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.23.0"
