[package]
name = "airwiki-mcp-bridge"
description = "Local stdio bridge for AirWiki MCP integrations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
airwiki-mcp = { version = "0.2.0", path = "../../crates/airwiki-mcp" }
tokio.workspace = true

[dev-dependencies]
serde_json.workspace = true
