[package]
name = "airwiki-core"
description = "Local ingestion, curation, OKF publishing and hybrid search for AirWiki"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
fastembed-runtime = ["dep:fastembed", "dep:tokenizers"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
airwiki-types = { version = "0.2.0", path = "../airwiki-types" }
chrono.workspace = true
directories = "6.0.0"
fastembed = { version = "5.17.2", optional = true, default-features = false, features = ["ort-download-binaries"] }
hex = "0.4.3"
lopdf = "0.44.0"
notify = "8.2.0"
pulldown-cmark = { version = "0.13.0", default-features = false }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono", "uuid"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
sha2 = "0.10.9"
thiserror.workspace = true
tokio.workspace = true
tokenizers = { version = "0.22.2", optional = true, default-features = false, features = ["onig"] }
tracing.workspace = true
uuid.workspace = true
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[dev-dependencies]
airwiki-inference = { version = "0.2.0", path = "../airwiki-inference" }
tempfile = "3.23.0"
