[package]
name = "airwiki-inference"
description = "Local model installation and llama.cpp supervision for AirWiki"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
futures-util = "0.3.31"
hex = "0.4.3"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
sysinfo = "0.37.2"
tar = "0.4.44"
tempfile = "3.23.0"
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "net", "process"] }
tokio-util = "0.7.16"
tracing.workspace = true
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
flate2 = "1.1.5"

[dev-dependencies]
tempfile = "3.23.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
