[package]
name = "airwiki-network"
description = "Authenticated local-network discovery, pairing and search transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = ["os-keyring"]
os-keyring = ["dep:keyring"]

[dependencies]
async-trait.workspace = true
base64 = "0.22.1"
airwiki-types = { version = "0.2.0", path = "../airwiki-types" }
bip39 = "2.2.0"
ciborium = "0.2.2"
futures = "0.3.31"
keyring = { version = "3.6.3", optional = true, features = ["apple-native", "windows-native"] }
libp2p = { version = "0.56.0", default-features = false, features = [
    "cbor",
    "autonat",
    "dcutr",
    "dns",
    "ed25519",
    "macros",
    "mdns",
    "noise",
    "quic",
    "relay",
    "request-response",
    "tcp",
    "tokio",
    "yamux",
] }
parking_lot = "0.12.5"
rand = "0.9.2"
serde.workspace = true
chrono.workspace = true
sha2 = "0.10.9"
thiserror.workspace = true
tokio.workspace = true
tokio-util = "0.7.18"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
tempfile = "3.23.0"
tokio = { workspace = true, features = ["test-util"] }
